fixed height and width problems (double scroll bar)

--- a/src/App.css
+++ b/src/App.css
@@ -5,10 +5,6 @@
   src: url("C:\Users\tgome\Desktop\CSE2\myportfolio\public\fonts\NTR-Regular.ttf") format("truetype");
 }
 
-html {
-  scroll-behavior: smooth;
-}
-
 /* Animation */
 
 .fade-in-section {
@@ -29,8 +25,7 @@ html {
   display:inline-block;
   width: 100%;
   height: 100%;
-  overflow-x: hidden;
-  overflow-y: auto;
+  overflow: hidden;
 }
 
 .App-logo {
